# sogitec4x-vintage--

./: 500leads600presets-sogitec-opticlink-hybrid.cmaj  CMakeLists.txt  Filter.cpp  Hybrid Engine  Params.h  PowerSag.h  README.md  Test-sogitec-opticlink-hybrid.cmaj  Voice.h  filter.h  whore.cmaj
Effects/: PowerSag.cpp
Sources/: PATCH SYSTEM (Bonus)  Synth.cpp  Voice.cpp  Voice.h
